--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -21,6 +21,14 @@ body {
 	height: 100%;
 }
 
+.desk-table{
+	width:100%;
+}
+
+.desk-img{
+	width: 100%;
+}
+
 
 /* ------------------------------------- 
 		ELEMENTS 
