--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -92,10 +92,17 @@
     	</tr>
     </table>
 
+    <table class="desk-table">
+      <tr>
+        <td><%= image_tag("desk.png",class: "desk-img") %></td>
+      </tr>
+    </table>
+
     <!-- FOOTER -->
     <table class="footer-wrap">
     	<tr>
     		<td></td>
+
     		<td class="container">
     			
     				<!-- content -->
