--- a/app/views/welcome/reminder.html.erb
+++ b/app/views/welcome/reminder.html.erb
@@ -6,39 +6,39 @@
 <body bgcolor="#F8F8F8" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
   <div class="main-container">
     <table class="head-wrap" bgcolor="#F5F5F5">
-    	<tr>
-    		<td></td>
-    		<td class="header container">
-    			
-    			<div class="content">
-    			<table>
-    				<tr>
-    					<td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
-    				</tr>
-    			</table>
-    			</div>
-    			
-    		</td>
-    		<td></td>
-    	</tr>
+      <tr>
+        <td></td>
+        <td class="header container">
+          
+          <div class="content">
+          <table>
+            <tr>
+              <td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
+            </tr>
+          </table>
+          </div>
+          
+        </td>
+        <td></td>
+      </tr>
     </table>
 
     <table class="body-wrap">
-    	<tr>
-    		<td></td>
-    		<td class="container" bgcolor="#FFFFFF">
-    			
-    			<!-- content -->
-    			<div class="content">
-    				<table>
-    					<tr>
-    						<td>
+      <tr>
+        <td></td>
+        <td class="container" bgcolor="#FFFFFF">
+          
+          <!-- content -->
+          <div class="content">
+            <table>
+              <tr>
+                <td class="centered-cell">
                   <h3>Just a reminder!</h3>
                 </td>
                 <td class="academy-img-cell" rowspan="2">
                   <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img") %>
                 </td>
-    					</tr>
+              </tr>
               <tr>
                 <td id="name-cell">
                   <p>Hi{Name}</p>
@@ -49,21 +49,21 @@
                   Your class starts soon!
                 </td>
               </tr>
-    				</table>
-    			</div>
-    			
+            </table>
+          </div>
+          
 
           <div class="content">
             <table id="class-info-table">
               <tr>
-                <td>
+                <td class="calendar-cell">
                   <img src="http://placehold.it/200x200/" />
                 </td>
                 <td class="class-info-cell">
                   <p>Class: <b>How To Reach a Tough Goal</b></p>
                   <p>Time: <b>Tuesday, October 18, 2013 @ 10:00 am</b></p>
                   <p>Class Overview: The most meaningful goals we pursue are usually also the toughest ones to reach. We'll discuss the *science* of reaching those tough goals.</p>
-                  <a class="btn" id="blue_btn">View Class!</a>
+                  <p class="btn-holder"><a class="btn" id="blue_btn">View Class!</a></p>
                 </td>
               </tr>
             </table>
@@ -86,22 +86,29 @@
               </tr>
             </table>
           </div>
-    		</td>
-    		<td></td>
-    	</tr>
+        </td>
+        <td></td>
+      </tr>
+    </table>
+
+    <table class="desk-table">
+      <tr>
+        <td><%= image_tag("desk.png",class: "desk-img") %></td>
+      </tr>
     </table>
 
     <!-- FOOTER -->
     <table class="footer-wrap">
       <tr>
         <td></td>
+
         <td class="container">
           
             <!-- content -->
             <div class="content">
               <table class="about-table">
                 <tr>
-                  <th><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
+                  <th class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
                   <th class="about-header-cell"><p>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></p></th>
                   <th class="about-header-cell"><p>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p></th>
                 </tr>
