--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="/email.css" />
+
 </head>
 <body bgcolor="#F8F8F8" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 
@@ -37,7 +38,7 @@
                   <h3>Congratulations!</h3>
                 </td>
                 <td class="academy-img-cell" rowspan="2">
-                  <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img") %>
+                  <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img", :width => "140px", :height=> "100px") %>
                 </td>
     					</tr>
               <tr>
