--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -7,9 +7,7 @@
 }
 * { font-family: "Helvetica","Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-img { 
-	max-width: 100%; 
-}
+
 .collapse {
 	margin:0;
 	padding:0;
@@ -21,13 +19,7 @@ body {
 	height: 100%;
 }
 
-.desk-table{
-	width:100%;
-}
 
-.desk-img{
-	width: 100%;
-}
 
 
 /* ------------------------------------- 
@@ -192,7 +184,7 @@ ul li {
 	border-right: 1px solid #E8E8E8;
 	border-bottom: 1px solid #E8E8E8;
 	border-top: 5px solid #4A4A4A;
-	background: #F8F8F8 !important;
+	background: #F8F8F8;
 }
 
 .teacher-info-cell{
@@ -200,7 +192,7 @@ ul li {
 }
 
 #teacher-pic{
-	border-radius:40%;
+	border-radius:50%;
 	overflow:hidden;
 }
 
@@ -215,6 +207,7 @@ ul li {
 .about-header-cell{
 	vertical-align: bottom;
 	padding-left: 20px;
+  text-align: left;
 }
 
 .unsubscribe-info-table{
@@ -234,10 +227,7 @@ ul li {
 }
 
 .arrow{
-	margin-left: 5px;
-  position: relative;
-  top: 4px;
-  width: 12px;
+	width: 12px;
 }
 
 .center-table{
@@ -284,7 +274,7 @@ ul li {
 }
 
 .about-table-cell{
-	padding-left: 30px;
+	padding-left: 20px;
 	vertical-align: top;
 }
 
@@ -313,80 +303,21 @@ ul li {
   background: #ffffff;
 }
 
+.desk-table{
+	width:100%;
+}
+
+.desk-img{
+	width: 100%;
+}
+
+.social-block{
+  width: 144px;
+}
+
 
 /* ------------------------------------------- 
 		PHONE
 		For clients that support media queries.
 		Nothing fancy. 
 -------------------------------------------- */
-@media only screen and (max-width: 820px) {
-	
-	a[class="btn"] { display:block!important; margin-bottom:10px!important; background-image:none!important; margin-right:0!important;}
-
-	div[class="column"] { width: auto!important; float:none!important;}
-	
-	table.social div[class="column"] {
-		width:auto!important;
-	}
-
-}
-
-@media only screen and (max-width: 320px) {
-	.main-container{
-		width: 288px;
-		border: 0;
-	}
-	.academy-img-cell{
-		display: none;
-	}
-
-	.container, .content{
-		max-width: 100%!important;
-	}
-
-	.centered-cell{
-		text-align: center;
-	}
-
-	.calendar-cell{
-		display: none;
-	}
-
-	.class-info-cell{
-		padding: 0;
-	}
-
-	a.btn{
-		display: inline-block!important;
-		padding: 10px 50px;
-	}
-
-	.btn-holder{
-		text-align: center;
-	}
-
-	.teacher-info-cell{
-		display: block;
-    text-align: center;
-  }
-
-  .teacher-info-cell p{
-  	text-align: left;
-  }
-
-  #teacher-pic{
-  	display: inline-block;
-  }
-
-  #teacher-bio{
-  	padding-left: 0;
-  }
-
-  .footer-img-holder, .about-header-cell, .about-table-cell{
-  	display: block;
-  }
-
-  .about-company-table{
-  	display: none;
-  }
-}
