--- a/app/assets/stylesheets/phone.css
+++ b/app/assets/stylesheets/phone.css
@@ -1,18 +1,6 @@
-@media only screen and (max-width: 820px) {
-	
-	a[class="btn"] { display:block!important; margin-bottom:10px!important; background-image:none!important; margin-right:0!important;}
-
-	div[class="column"] { width: auto!important; float:none!important;}
-	
-	table.social div[class="column"] {
-		width:auto!important;
-	}
-
-}
-
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 321px) {
 	.main-container{
-		width: 288px;
+		width: 100%;
 		border: 0;
 	}
 	.academy-img-cell{
@@ -20,7 +8,7 @@
 	}
 
 	.container, .content{
-		max-width: 100%!important;
+		max-width: 100%;
 	}
 
 	.centered-cell{
@@ -36,7 +24,7 @@
 	}
 
 	a.btn{
-		display: inline-block!important;
+		display: inline-block;
 		padding: 10px 50px;
 	}
 
@@ -47,7 +35,7 @@
 	.teacher-info-cell{
 		display: block;
     text-align: center;
-  }
+  	}
 
   .teacher-info-cell p{
   	text-align: left;
