made fe changes`

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html style="margin: 0;padding: 0;">
+<head style="margin: 0;padding: 0;">
   <title>Testapp</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body bgcolor="#F8F8F8" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 
 <%= yield %>
 
