--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,185 +1,175 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="/email.css" />
-
-</head>
-<body bgcolor="#F8F8F8" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
-
-  <div class="main-container">
-    <table class="head-wrap" bgcolor="#F5F5F5">
-    	<tr>
-    		<td></td>
-    		<td class="header container">
-    			
-    			<div class="content">
-    			<table>
-    				<tr>
-    					<td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
-    				</tr>
-    			</table>
-    			</div>
-    			
-    		</td>
-    		<td></td>
-    	</tr>
-    </table>
-
-    <table class="body-wrap">
-    	<tr>
-    		<td></td>
-    		<td class="container" bgcolor="#FFFFFF">
-    			
-    			<!-- content -->
-    			<div class="content">
-    				<table>
-    					<tr>
-    						<td class="centered-cell">
-                  <h3>Congratulations!</h3>
-                </td>
-                <td class="academy-img-cell" rowspan="2">
-                  <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img", :width => "140px", :height=> "100px") %>
-                </td>
-    					</tr>
-              <tr>
-                <td id="name-cell">
-                  <p>Hi{Name}</p>
-                </td>
-              </tr>
-              <tr>
+<table bgcolor="#fff" cellspacing="0" cellpadding="0" border="0" width="100%" align="center" style="margin:20px auto;padding:0px;font-family: 'Helvetica Neue', arial, sans-serif;color:#4a4a4a;font-size:14px;" >
+  <tr>
+      <td bgcolor="#f5f5f5" style="padding:6px 0 12px 0;background-color:#f5f5f5" align="center">
+        <table cellspacing="0" cellpadding="0" border="0" width="95%" >
+          <tr>
+              <td><a href="#"><img src="/assets/academy/images/entheos_logo_footer_2x.png" border="none" width="98" /></a></td>
+          </tr>  
+        </table> 
+          
+      </td>
+  </tr>
+  <tr>
+    <td align="center">
+        <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center">
+          <tr>
+              <td>
+                  <h1 style="margin:30px 0 20px 0;padding:0px;text-align:center;font-size:30px; font-weight:bold;">Congratulations!</h1>
+              </td>
+          </tr>
+          <tr>
+              <td>
+                  <p style="margin:0px 0 20px 0;padding:0px;">Hi there!</p> 
+                  <p style="margin:0px 0 20px 0;padding:0px;">Your scholarship has been granted!</p>
+                  <p style="margin:0px 0 20px 0;padding:0px;">You now have access to the following products:</p>
+                  <p style="margin:0px 0 20px 0;padding:0px;font-weight:bold;">PhilosophersNotes - Volume I (Digital)</p>
+                  <p style="margin:0px 0 20px 0;padding:0px;">To log in simply visit the following url and enter the email and password given below:</p> 
+                  <p style="margin:0px 0 20px 0;padding:0px;">
+                    <strong>Login page:</strong> <a href="http://local.entheos.com/library" style="color:#407bcf;text-decoration:none;" target="_blank">http://local.entheos.com/library</a><br/> 
+                    <strong>Email:</strong> <a href="mailto:joshuaw@mailinator.com" style="color:#4a4a4a;text-decoration:none;">joshuaw@mailinator.com</a> <br/>
+                    <strong>Password:</strong> en*theos 
+                 </p>   
+                 <p style="margin:0px 0 10px 0;padding:0px;">We hope you love it. And, if you do, we'd very much appreciate your support in helping us spread the word!</p> 
+                 <p style="margin:0px 0 20px 0;padding:0px;">Here's to optimizing our lives so we can change the world together,</p>
+                 <p style="margin:0px 0 5px 0;padding:0px;"><img src="/assets/academy/images/brian-sign.jpg" border="none" /></p>
+                 <h5 style="margin:0px 0 5px 0;padding:0px; font-size:17px;">Brian Johnson</h5>
+                 <p style="margin:0px 0 5px 0;padding:0px;">Philosopher + CEO</p>
+              </td>
+          </tr>  
+        </table>  
+    </td>
+  </tr>
+  <tr>
+      <td height="50"></td>
+  </tr>
+  <tr>
+      <td>
+          <img src="/assets/academy/images/desk_books_2x.png" border="none" width="100%"/>
+      </td>
+  </tr>
+  <tr>
+      <td height="25"></td>
+  </tr>
+  <tr>
+       <td align="center">
+        <table cellspacing="0" cellpadding="0" border="0" width="95%" align="center">
+            <tr>
                 <td>
-                  Thanks for registering!
-                </td>
-              </tr>
-    				</table>
-    			</div>
-    			
-
-          <div class="content">
-            <table id="class-info-table">
-              <tr>
-                <td class="calendar-cell">
-                  <img src="http://placehold.it/200x200/" />
-                </td>
-                <td class="class-info-cell">
-                  <p>Class: <b>How To Reach a Tough Goal</b></p>
-                  <p>Time: <b>Tuesday, October 18, 2013 @ 10:00 am</b></p>
-                  <p>Class Overview: The most meaningful goals we pursue are usually also the toughest ones to reach. We'll discuss the *science* of reaching those tough goals.</p>
-                  <p class="btn-holder"><a class="btn" id="blue_btn">View Class!</a></p>
-                </td>
-              </tr>
-            </table>
-          </div>
-
-
-          <div class="content">
-            <table id="teacher-info-table">
-              <tr>
-                <td class="teacher-info-cell">
-                  <div id="teacher-pic">
-                    <%= image_tag "heidi_square.png" %>
-                  </div>
-                </td>
-                <td class="teacher-info-cell" id="teacher-bio">
-                  <p><b>Heidi Grant Halvorson, Ph.D.</b><br/>
-                    Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.</p>
-                  <a>View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow") %></a>
-                </td>
-              </tr>
-            </table>
-          </div>
-    		</td>
-    		<td></td>
-    	</tr>
-    </table>
-
-    <table class="desk-table">
-      <tr>
-        <td><%= image_tag("desk.png",class: "desk-img") %></td>
-      </tr>
-    </table>
-
-    <!-- FOOTER -->
-    <table class="footer-wrap">
-    	<tr>
-    		<td></td>
-
-    		<td class="container">
-    			
-    				<!-- content -->
-    				<div class="content">
-    					<table class="about-table">
-                <tr>
-                  <th class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
-                  <th class="about-header-cell"><p>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></p></th>
-                  <th class="about-header-cell"><p>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p></th>
-                </tr>
-    						<tr class="about-table-row">
-    							<td class="about-table-cell">
-    								<p>Our purpose is to help you</br>
-                      optimize your life so we can</br>
-                      change the world together.</p>
-                    <table class="about-company-table">
-                      <thead>
+                    <table cellspacing="0" cellpadding="0" border="0" width="100%" style="color:#8c8c8c;font-size:13px;line-height:normal;">
                         <tr>
-                          <th><p><b>Company</b><%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></th>
+                            <td width="33%" valign="top">
+                                <a href="#"><img src="/assets/academy/images/entheos_logo_footer_2x.png" border="none" width="170" /></a>
+                                <p style="margin:15px 0;padding:0px;">
+                                  Our purpose is to help you optimize your life so we can change the world together.
+                                </p>
+                                <h5 style="margin:0 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                                    Company <img src="/assets/academy/images/f-right-arrow.jpg" border="none"/>
+                                </h5>
+                                <table>
+                                  <tr>
+                                      <td width="90"><a href="#" style="color:#8c8c8c;text-decoration:none;">About</a></td>
+                                      <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Affiliate Program</a></td>
+                                  </tr>
+                                  <tr>
+                                      <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Contact Us</a></td>
+                                      <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Privacy Policy</a></td>
+                                  </tr>
+                                  <tr>
+                                      <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Support</a></td>
+                                      <td><a href="#" style="color:#8c8c8c;text-decoration:none;">Terms & Conditions</a></td>
+                                  </tr>
+                                </table>
+                            </td>
+                            <td width="33%" align="center" style="text-align:center;" valign="top">
+                                <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                                    Share the Wisdom <img src="/assets/academy/images/f-right-arrow.jpg" border="none"/>
+                                </h5>
+                                <p style="margin:5px 0 20px 0;padding:0px;">
+                                    <a href="#"><img src="/assets/academy/images/twittericon.jpg" border="none" /></a>
+                                </p> 
+                                 <p style="margin:0px 0 20px 0;padding:0px;">
+                                    <a href="#"><img src="/assets/academy/images/fb-icon.jpg" border="none" /></a>
+                                </p>    
+                            </td>
+                            <td width="33%" valign="top">
+                                <h5 style="margin:15px 0 10px 0;padding:0px;font-size:16px;font-weight:normal;color:#4a4949;">
+                                    More Goodness <img src="/assets/academy/images/f-right-arrow.jpg" border="none"/>
+                                </h5> 
+                                <table border="0" width="100%">
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Virtual Conferences</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">PhilosophersNotes</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Optimal Living 101</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">The Academy for Optimal Living</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Rock Your Goddess Life</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Blissitations</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Quotes</a>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                        <a href="#" style="color:#8c8c8c;text-decoration:none;">Big Ideas</a>
+                                      </td>
+                                  </tr>
+                                </table>
+                            </td>
                         </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><p>About</p></td>
-                          <td><p>Affiliate Program</p></td>
-                        </tr>
-                        <tr>
-                          <td><p>Contact Us</p></td>
-                          <td><p>Privacy Policy</p></td>
-                        </tr>
-                        <tr>
-                          <td><p>Support</p></td>
-                          <td><p>Terms and Conditions</p></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </td>
-
-                  <td class="about-table-cell">
-                    <p class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></p>
-                    <p class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></p>
-                  </td>
-
-                  <td class="about-table-cell">
-                    <p>The Academy for Optimal Living</br>
-                      Virtual Conferences</br>
-                      PhilosophersNotes</br>
-                      Optimal Living 101</br>
-                      Rock Your Goddess Life</br>
-                      Blisstations</br>
-                      Quotes</br>
-                      Big Ideas</p>
-                  </td>
-
-    						</tr>
-
-                <tr >
-                  <td colspan="3" class="entheos-info-cell">
-                    <p><b>en + theos.</b> Two little Greek words. Put'em together and you've got <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.</p>
-                  </td>
-                </tr>
-    					</table>
-              <table class="unsubscribe-info-table">
-                <tr>
-                  <td class="unsubscribe-info-cell">
-                  <p>You're receiving this email because you signed up for the {insert reason}.</br>
-                  If this email looks weird,<a> view it in your browser.</a></br>
-                  If you don't want to receive this newsletteranymore,you can <a>unsubscribe</a>(if you like share it with your friend!)
-                  </td>
-                </tr>
-              </table>
-    				</div><!-- /content -->
-    				
-    		</td>
-    	</tr>
-    </table><!-- /FOOTER -->
-  </div>
-</body>
-</html>
+                    </table>  
+                </td>
+            </tr>
+            <tr>
+                <td height="45"></td>
+            </tr>
+            <tr>
+                <td bgcolor="#f5f5f5" style="background-color:#f5f5f5;border:1px solid #e0e0e0;padding:30px 20px;line-height:22px;text-align:center;color:#6e6e6e;font-size:13px;">
+                  en + theos. Two little Greek words. Put ‘em together and you’ve got enthusiasm—or “God within”—the secret sauce to authentic awesomeness.
+                </td>
+            </tr>
+            <tr>
+                <td height="70"></td>
+            </tr>
+            <tr>
+                <td style="font-size:12px; text-align:center;">
+                   <p style="margin:0px 0 20px 0;padding:0px;">
+                    You’re receiving this email because you signed up for the {<a href="#" style="color:#407bcf;text-decoration;">insert reason</a>}.If this email looks weird, <a href="#" style="color:#407bcf;text-decoration;">view it in your browser</a>. If you don’t want to receive this newsletter anymore,you can <a href="#" style="color:#407bcf;text-decoration;">unsubscribe</a>. (If you like it, share with a friend! :)
+                   </p>
+                   <p style="margin:0;padding:0px;">
+                    @copy; 2009-2013 en*theos Enterprises, LLC | P.O. Box 33582 San Diego, CA 92163 
+                   </p> 
+                </td>
+            </tr>
+        </table>  
+      </td>
+  </tr>  
+  <tr><td><%=link_to "send mail", welcome_index_path, method: "post" %></td></tr>
+</table>  
