--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,313 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- */
+/* ------------------------------------- 
+		GLOBAL 
+------------------------------------- */
+* { 
+	margin:0;
+	padding:0;
+}
+* { font-family: "Helvetica","Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-/*@import "email.css";*/
+
+.collapse {
+	margin:0;
+	padding:0;
+}
+
+body {
+	-webkit-font-smoothing:antialiased; 
+	-webkit-text-size-adjust:none; 
+	width: 100%!important; 
+	height: 100%;
+	color: #4A4A4A;
+}
+
+/* ------------------------------------- 
+		ELEMENTS 
+------------------------------------- */
+a { color: #2BA6CB;}
+
+.btn {
+	text-decoration:none;
+	color: #FFF;
+	padding:10px 40px;
+	margin-right:10px;
+	text-align:center;
+	cursor:pointer;
+	display: inline-block;
+}
+
+p.callout {
+	padding:15px;
+	background-color:#ECF8FF;
+	margin-bottom: 15px;
+}
+.callout a {
+	font-weight:bold;
+	color: #2BA6CB;
+}
+
+table.social {
+/* 	padding:15px; */
+	background-color: #ebebeb;
+	
+}
+
+/* ------------------------------------- 
+		HEADER 
+------------------------------------- */
+table.head-wrap { width: 100%;}
+
+.header.container table td.logo { padding: 15px; }
+.header.container table td.label { padding: 15px; padding-left:0px;}
+
+
+/* ------------------------------------- 
+		BODY 
+------------------------------------- */
+table.body-wrap { width: 100%;}
+
+
+/* ------------------------------------- 
+		FOOTER 
+------------------------------------- */
+table.footer-wrap { width: 100%;	clear:both!important;
+}
+
+/* ------------------------------------- 
+		TYPOGRAPHY 
+------------------------------------- */
+h1,h2,h3,h4,h5,h6 {
+font-family: "Helvetica", Arial, sans-serif; line-height: 1.1; margin-bottom:15px;
+}
+h1 small, h2 small, h3 small, h4 small, h5 small, h6 small { font-size: 60%; line-height: 0; text-transform: none; }
+
+h1 { font-weight:200; font-size: 44px;}
+h2 { font-weight:200; font-size: 37px;}
+h3 { font-weight:500; font-size: 27px;}
+h4 { font-weight:500; font-size: 23px;}
+h5 { font-weight:900; font-size: 17px;}
+h6 { font-weight:900; font-size: 14px;}
+
+
+/* --------------------------------------------------- 
+		RESPONSIVENESS
+		Nuke it from orbit. It's the only way to be sure. 
+------------------------------------------------------ */
+
+/* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
+.container {
+	display:block;
+	margin:0 auto; /* makes it centered */
+	clear:both;
+}
+
+/* This should also be a block element, so that it will fill 100% of the .container */
+.content {
+	padding: 15px 0;
+}
+
+
+
+/* Let's make sure tables in the content area are 100% wide */
+.content table { width: 100%; }
+
+
+/* Odds and ends */
+.column {
+	width: 300px;
+	float:left;
+}
+.column tr td { padding: 15px; }
+.column-wrap { 
+	padding:0!important; 
+	margin:0 auto; 
+	max-width:720px!important;
+}
+.column table { width:100%;}
+.social .column {
+	width: 280px;
+	min-width: 279px;
+	float:left;
+}
+
+/* Be sure to place a .clear element after each set of columns, just to be safe */
+.clear { display: block; clear: both; }
+
+
+/*custum settings */
+
+#name-cell{
+	padding: 20px 0 0;
+}
+
+.class-info-cell{
+	padding-left: 40px;
+}
+
+.blk {
+	padding-bottom: 24px;
+	color: red;
+}
+
+#blue_btn{
+	background-color: #407BCF;
+	-webkit-box-shadow: 0 5px 0px 0px #2E5997;
+	-moz-box-shadow: 0 5px 0px 0px #2E5997;
+	box-shadow: 0 5px 0px 0px #2E5997;
+}
+
+#green_btn{
+	background-color: #60B86A;
+	-webkit-box-shadow: 0 5px 0px 0px #44884D;
+	-moz-box-shadow: 0 5px 0px 0px #44884D;
+	box-shadow: 0 5px 0px 0px #44884D;
+}
+
+.teacher-info-table{
+	padding:20px;
+	border-left: 1px solid #E8E8E8;
+	border-right: 1px solid #E8E8E8;
+	border-bottom: 1px solid #E8E8E8;
+	border-top: 5px solid #4A4A4A;
+	background: #F8F8F8;
+}
+
+.teacher-info-cell{
+	vertical-align: top;
+}
+
+#teacher-pic{
+	border-radius:50%;
+	overflow:hidden;
+}
+
+#teacher-bio{
+	padding-left: 30px;
+}
+
+.about-table{
+	padding: 20px;
+}
+
+.about-header-cell{
+	vertical-align: bottom;
+	padding-left: 20px;
+  text-align: left;
+}
+
+.unsubscribe-info-table{
+	padding: 20px;
+}
+
+.unsubscribe-info-cell{
+	text-align: center;
+	padding: 0 30px;
+}
+
+.entheos-info-cell{
+	border: 1px solid #E0E0E0;
+	background-color: #F5F5F5;
+	padding:20px;
+	text-align: center;
+}
+
+.arrow{
+	width: 12px;
+}
+
+.center-table{
+	padding-left: 25%;
+}
+.center-table-cell{
+	width: 0px;
+}
+
+#forgot-pass-btn-cell{
+	padding-top: 20px;
+	text-align: center;
+}
+
+.center-table-cell p, .about-table-cell p, .teacher-info-cell p, .class-info-cell p, .entheos-info-cell p,
+.unsubscribe-info-cell p{
+	color: #494949;
+}
+
+
+.center-table-cell h3, .about-header-cell p{
+	color: #4A4A4A;
+	font-weight: bold;
+}
+
+.about-company-table th{
+	text-align: left; 
+}
+
+.footer-logo{
+	width:160px;
+}
+
+.header-logo{
+	width: 100px;
+}
+
+.academy-img{
+	width:140px;
+	height: 100px;
+}
+
+.academy-img-cell{
+	text-align: right;
+}
+
+.about-table-cell{
+	padding-left: 20px;
+	vertical-align: top;
+}
+
+.social-img-holder{
+	text-align: center;
+}
+
+
+.twitter-img{
+	height:30px;
+	width: 35px;
+}
+
+.fb-img{
+	height: 35px;
+	width: 20px;
+}
+
+.main-container{
+	width:60%;
+	margin: 0 auto;
+	border: 1px solid #E0E0E0;
+	-moz-box-shadow:    0 3px 5px 2px #E0E0E0;
+  -webkit-box-shadow: 0 3px 5px 2px #E0E0E0;
+  box-shadow:         0 3px 5px 2px #E0E0E0;
+  background: #ffffff;
+}
+
+.desk-table{
+	width:100%;
+}
+
+.desk-img{
+	/*width: 100%;*/
+}
+
+.social-block{
+  width: 144px;
+}
+
+.schedule .heading {
+	padding-bottom: 18px;
+}
+
+
+/* ------------------------------------------- 
+		PHONE
+		For clients that support media queries.
+		Nothing fancy. 
+-------------------------------------------- */
