--- a/app/views/user_mailer/test.html.erb
+++ b/app/views/user_mailer/test.html.erb
@@ -1,184 +1,204 @@
-
-
-  <div class="main-container">
-    <table>
-      <tr>
-        <td>
-          <table class="head-wrap" bgcolor="#F5F5F5">
-            <tr>
-              <td class="header container">
-                
-                <div class="content">
-                <table>
-                  <tr>
-                    <td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
-                  </tr>
-                </table>
-                </div>
-                
-              </td>
-              <td></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-
-    
-
-    <table class="body-wrap">
-      <tr>
-        <td></td>
-        <td class="container" bgcolor="#FFFFFF">
-          
-          <!-- content -->
-          <div class="content">
-            <table>
+<style type="text/css">
+   #bodyTable {height:100% !important; margin:0; padding:0; width:100% !important;}
+   #templateContainer { max-width: 700px; width: 100%; }
+   #templatePreheader{ padding: 0 30px; }
+</style>
+<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
+  <tr>
+    <td align="center" valign="top" id="bodyCell">
+      <table border="0" cellpadding="0" cellspacing="0" width="100%" class="main-container" id="templateContainer">
+        <tr>
+          <td align="center" valign="top" id="bodyCell">
+            <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" bgcolor="#F5F5F5" >
               <tr>
-                <td class="centered-cell">
-                  <h3>Congratulations!</h3>
-                </td>
-                <td class="academy-img-cell" rowspan="2">
-                  <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img", :width => "140px", :height=> "100px") %>
-                </td>
-              </tr>
-              <tr>
-                <td id="name-cell">
-                  <p>Hi{Name}</p>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  Thanks for registering!
+                <td class="header container">
+                  <div class="content">
+                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                      <tr>
+                        <td><%= image_tag("logo_header_2x.png", class: "header-logo") %></td>
+                      </tr>
+                    </table>
+                  </div>
                 </td>
               </tr>
             </table>
-          </div>
-          
-
-          <div class="content">
-            <table id="class-info-table">
-              <tr>
-                <td class="calendar-cell">
-                  <img src="http://placehold.it/200x200/" />
-                </td>
-                <td class="class-info-cell">
-                  <p>Class: <b>How To Reach a Tough Goal</b></p>
-                  <p>Time: <b>Tuesday, October 18, 2013 @ 10:00 am</b></p>
-                  <p>Class Overview: The most meaningful goals we pursue are usually also the toughest ones to reach. We'll discuss the *science* of reaching those tough goals.</p>
-                  <p class="btn-holder"><a class="btn" id="blue_btn">View Class!</a></p>
-                </td>
-              </tr>
-            </table>
-          </div>
-
-
-          <div class="content">
-            <table id="teacher-info-table">
+          <td>
+        </tr>
+        <tr>
+          <td align="center" valign="top" id="bodyCell" class="container" bgcolor="#FFFFFF">
+            <div class="content">
+              <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader">
+                <tr>
+                  <td class="centered-cell">
+                    <h3>Congratulations!</h3>
+                    <div id="name-cell">
+                      Hi{Name}
+                    </div>
+                  </td>
+                  <td class="academy-img-cell" rowspan="2">
+                    <%= image_tag("academy_icon_emailreminder_2x.png",class: "academy-img", :width => "140px", :height=> "100px") %>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="content">
+              <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader" class="schedule">
+                <tr>
+                  <td class="heading">
+                    Thanks for registering!
+                  </td>
+                </tr>
+                <tr>
+                  <td class="calendar-cell" align="center" valign="top">
+                    <div style="width:177px;height:197px;background:#ffffff;border:1px solid #e3e3e3;">
+                      <div style="height:41px;background:#60B86A;color:#ffffff;">
+                        <p style="font-size: 18px;line-height: 42px;text-align: center;">November</p>
+                      </div>
+                      <p style="font-size:65px; text-align:center; color:#4a4a4a; padding: 30px 0;">
+                        18
+                        <span style="display:block; font-size:20px; color:#AFAFAF;">Wednesday</span>
+                      </p>
+                    </div>
+                  </td>
+                  <td class="class-info-cell" valign="top">
+                    <div class="blk">
+                      <label>Class:</label>
+                      <span>How To Reach a Tough Goal</span>
+                    </div>
+                    <div class="blk">
+                      <label>Time:</label>
+                      <span>Tuesday, October 18, 2013 @ 10:00 am</span>
+                    </div>
+                    <div class="blk">
+                      <label>Class Overview:</label> 
+                      <span>
+                        The most meaningful goals we pursue are usually also the toughest ones to reach. We'll discuss the *science* of reaching those tough goals.
+                      </span>
+                    </div>
+                    <div class="btn-holder"><a class="btn" id="blue_btn">View Class!</a></div>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td align="center" valign="top" style="padding: 36px 0;">
+            <table class="teacher-info-table" style="padding: 15px 30px; width: 90%;" border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader">
               <tr>
                 <td class="teacher-info-cell">
                   <div id="teacher-pic">
                     <%= image_tag "heidi_square.png" %>
                   </div>
                 </td>
-                <td class="teacher-info-cell" id="teacher-bio">
-                  <p><b>Heidi Grant Halvorson, Ph.D.</b><br/>
-                    Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.</p>
+                <td class="teacher-info-cell" id="teacher-bio" valign="top" >
+                  <div>
+                    <h4>Heidi Grant Halvorson, Ph.D.</h4>
+                    <p style="margin-bottom: 8px;">
+                      Heidi is a social psychologist who researches, writes and speaks about the science of motivation. She is the Associate Director of the Motivation Science Center at the Columbia Business School.
+                    </p>
+                  </div>
                   <a>View full bio <%= image_tag("gren_arrow_2x.png",:class=>"arrow") %></a>
                 </td>
               </tr>
             </table>
-          </div>
-        </td>
-        <td></td>
-      </tr>
-    </table>
-
-    <table class="desk-table">
-      <tr>
-        <td><%= image_tag("desk.png",class: "desk-img") %></td>
-      </tr>
-    </table>
-
-    <!-- FOOTER -->
-    <table class="footer-wrap">
-      <tr>
-        <td></td>
-
-        <td class="container">
-          
-            <!-- content -->
-            <div class="content">
-              <table class="about-table">
-                <tr>
-                  <th class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
-                  <th class="about-header-cell"><p class="social-block">Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></p></th>
-                  <th class="about-header-cell"><p>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p></th>
-                </tr>
-                <tr class="about-table-row">
-                  <td class="about-table-cell">
-                    <p>Our purpose is to help you</br>
-                      optimize your life so we can</br>
-                      change the world together.</p>
-                    <table class="about-company-table">
-                      <thead>
-                        <tr>
-                          <th colspan="2"><p><b>Company<%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></b></p></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><p>About</p></td>
-                          <td><p>Affiliate Program</p></td>
-                        </tr>
-                        <tr>
-                          <td><p>Contact Us</p></td>
-                          <td><p>Privacy Policy</p></td>
-                        </tr>
-                        <tr>
-                          <td><p>Support</p></td>
-                          <td><p>Terms and Conditions</p></td>
-                        </tr>
-                      </tbody>
+          </td>
+        </tr>
+        <tr>
+          <td align="center" valign="top" id="bodyCell">
+            <table class="desk-table" border="0" cellpadding="0" cellspacing="0" width="100%" id="">
+              <tr>
+                <td><%= image_tag("desk.png",class: "desk-img") %></td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <td align="center" valign="top" id="bodyCell">
+            <table class="footer-wrap">
+              <tr>
+                <td class="container">
+                  <div class="content">
+                    <table class="about-table">
+                      <tr>
+                        <th class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
+                        <th class="about-header-cell">
+                          <p>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></p>
+                        </th>
+                        <th class="about-header-cell">
+                          <p>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p>
+                        </th>
+                      </tr>
+                      <tr class="about-table-row">
+                        <td class="about-table-cell">
+                          <p>
+                            Our purpose is to help you</br>
+                            optimize your life so we can</br>
+                            change the world together.
+                          </p>
+                          <table class="about-company-table">
+                            <thead>
+                              <tr>
+                                <th><p><b>Company</b><%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td><p>About</p></td>
+                                <td><p>Affiliate Program</p></td>
+                              </tr>
+                              <tr>
+                                <td><p>Contact Us</p></td>
+                                <td><p>Privacy Policy</p></td>
+                              </tr>
+                              <tr>
+                                <td><p>Support</p></td>
+                                <td><p>Terms and Conditions</p></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </td>
+                        <td class="about-table-cell">
+                          <p class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></p>
+                          <p class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></p>
+                        </td>
+                        <td class="about-table-cell">
+                          <p>
+                            The Academy for Optimal Living</br>
+                            Virtual Conferences</br>
+                            PhilosophersNotes</br>
+                            Optimal Living 101</br>
+                            Rock Your Goddess Life</br>
+                            Blisstations</br>
+                            Quotes</br>
+                            Big Ideas
+                          </p>
+                        </td>
+                      </tr>
+                      <tr >
+                        <td colspan="3" class="entheos-info-cell">
+                          <p><b>en + theos.</b> Two little Greek words. Put'em together and you've got <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.</p>
+                        </td>
+                      </tr>
                     </table>
-                  </td>
-
-                  <td class="about-table-cell">
-                    <p class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></p>
-                    <p class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></p>
-                  </td>
-
-                  <td class="about-table-cell">
-                    <p>The Academy for Optimal Living</br>
-                      Virtual Conferences</br>
-                      PhilosophersNotes</br>
-                      Optimal Living 101</br>
-                      Rock Your Goddess Life</br>
-                      Blisstations</br>
-                      Quotes</br>
-                      Big Ideas</p>
-                  </td>
-
-                </tr>
-
-                <tr >
-                  <td colspan="3" class="entheos-info-cell">
-                    <p><b>en + theos.</b> Two little Greek words. Put'em together and you've got <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.</p>
-                  </td>
-                </tr>
-              </table>
-              <table class="unsubscribe-info-table">
-                <tr>
-                  <td class="unsubscribe-info-cell">
-                  <p>You're receiving this email because you signed up for the {insert reason}.</br>
-                  If this email looks weird,<a> view it in your browser.</a></br>
-                  If you don't want to receive this newsletteranymore,you can <a>unsubscribe</a>(if you like share it with your friend!)
-                  </td>
-                </tr>
-              </table>
-            </div><!-- /content -->
-          <tr><%=link_to "send mail", welcome_index_path, method: "post" %></tr>  
-        </td>
-      </tr>
-    </table><!-- /FOOTER -->
-  </div>
+                    <table class="unsubscribe-info-table">
+                      <tr>
+                        <td class="unsubscribe-info-cell">
+                          <p>
+                            You're receiving this email because you signed up for the {insert reason}.</br>
+                            If this email looks weird,<a> view it in your browser.</a></br>
+                            If you don't want to receive this newsletteranymore,you can <a>unsubscribe</a>(if you like share it with your friend!)
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
