--- a/app/assets/stylesheets/phone.css
+++ b/app/assets/stylesheets/phone.css
@@ -3,6 +3,11 @@
 		width: 100%;
 		border: 0;
 	}
+
+	.desk-img{
+		width: 100%;
+	}
+
 	.academy-img-cell{
 		display: none;
 	}
@@ -37,7 +42,7 @@
     text-align: center;
   	}
 
-  .teacher-info-cell p{
+  .teacher-info-cell p, #name-cell{
   	text-align: left;
   }
 
@@ -51,6 +56,7 @@
 
   .footer-img-holder, .about-header-cell, .about-table-cell{
   	display: block;
+  	text-align: center;
   }
 
   .about-company-table{
