--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,8 +59,17 @@
           <div class="content">
             <table id="class-info-table">
               <tr>
-                <td class="calendar-cell">
-                  <img src="http://placehold.it/200x200/" />
+                <td>
+                  <div style="width:177px;height:197px;background:#ffffff;border:1px solid #000000;">
+                    <div style="height:41px;background:#60B86A;color:#ffffff;">
+                      <p style="font-size: 18px;line-height: 35px;text-align: center;">November</p>
+                    </div>
+                    <p style="font-size:65px; text-align:center; color:#4a4a4a;">
+                      18
+                      <span style="display:block; font-size:20px; color:#AFAFAF;">Wednesday</span>
+                    </p>
+                    
+                  </div>
                 </td>
                 <td class="class-info-cell">
                   <p>Class: <b>How To Reach a Tough Goal</b></p>
