--- a/app/views/welcome/demo.html.erb
+++ b/app/views/welcome/demo.html.erb
@@ -115,55 +115,62 @@
         </tr>
         <tr>
           <td align="center" valign="top" id="bodyCell">
-            <table class="footer-wrap">
+            <table class="footer-wrap" border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
-                <td class="container">
+                <td class="container" valign="top" id="bodyCell">
                   <div class="content">
-                    <table class="about-table">
+                    <table class="about-table" border="0" cellpadding="0" cellspacing="0" width="100%">
                       <tr>
-                        <th class="footer-img-holder"><%= image_tag("logo_footer_2x.png", class: "footer-logo") %></th>
-                        <th class="about-header-cell">
-                          <p>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></p>
+                        <th class="footer-img-holder" align="left">
+                          <%= image_tag("logo_footer_2x.png", class: "footer-logo") %>
                         </th>
-                        <th class="about-header-cell">
-                          <p>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p>
+                        <th class="about-header-cell" align="left">
+                          <div>Share the Wisdom <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></div>
+                        </th>
+                        <th class="about-header-cell" align="left">
+                          <div>More Goodness <%= image_tag("small_grey_arrow_2x.png",:class=>"arrow")%></p=div>
                         </th>
                       </tr>
                       <tr class="about-table-row">
-                        <td class="about-table-cell">
-                          <p>
+                        <td class="about-table-cell" align="left">
+                          <div class="text">
                             Our purpose is to help you</br>
                             optimize your life so we can</br>
                             change the world together.
-                          </p>
-                          <table class="about-company-table">
+                          </div>
+                          <table class="about-company-table" border="0" cellpadding="0" cellspacing="0" width="100%">
                             <thead>
                               <tr>
-                                <th><p><b>Company</b><%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %></th>
+                                <th align="left">
+                                  <div class="sub-header">
+                                    <label>Company</label>
+                                    <%=image_tag("small_grey_arrow_2x.png",:class=>"arrow") %>
+                                  </div>
+                                </th>
                               </tr>
                             </thead>
                             <tbody>
                               <tr>
-                                <td><p>About</p></td>
-                                <td><p>Affiliate Program</p></td>
+                                <td align="left" class="lnks">About</td>
+                                <td align="left" class="lnks">Affiliate Program</td>
                               </tr>
                               <tr>
-                                <td><p>Contact Us</p></td>
-                                <td><p>Privacy Policy</p></td>
+                                <td align="left" class="lnks">Contact Us</td>
+                                <td align="left" class="lnks">Privacy Policy</td>
                               </tr>
                               <tr>
-                                <td><p>Support</p></td>
-                                <td><p>Terms and Conditions</p></td>
+                                <td align="left" class="lnks">Support</td>
+                                <td align="left" class="lnks">Terms and Conditions</td>
                               </tr>
                             </tbody>
                           </table>
                         </td>
-                        <td class="about-table-cell">
-                          <p class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></p>
-                          <p class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></p>
+                        <td class="about-table-cell" align="left">
+                          <div class="social-img-holder"><%= image_tag("twitter_icon_2x.png", class: "twitter-img") %></div>
+                          <div class="social-img-holder"><%= image_tag("facebook_icon_2x.png", class: "fb-img")%></div>
                         </td>
-                        <td class="about-table-cell">
-                          <p>
+                        <td class="about-table-cell" align="left">
+                          <div class="text">
                             The Academy for Optimal Living</br>
                             Virtual Conferences</br>
                             PhilosophersNotes</br>
@@ -172,22 +179,28 @@
                             Blisstations</br>
                             Quotes</br>
                             Big Ideas
+                          </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td colspan="3" align="left" class="entheos-info-cell">
+                          <p>
+                            <b>en + theos.</b> Two little Greek words. Put'em together and you've got 
+                            <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.
                           </p>
                         </td>
                       </tr>
-                      <tr >
-                        <td colspan="3" class="entheos-info-cell">
-                          <p><b>en + theos.</b> Two little Greek words. Put'em together and you've got <i>enthusiasm</i>--or "God within"--the secret sauce to authentic awesomeness.</p>
-                        </td>
-                      </tr>
                     </table>
-                    <table class="unsubscribe-info-table">
+                    <table class="unsubscribe-info-table" border="0" cellpadding="0" cellspacing="0" width="100%">
                       <tr>
-                        <td class="unsubscribe-info-cell">
+                        <td class="unsubscribe-info-cell" align="left">
                           <p>
                             You're receiving this email because you signed up for the {insert reason}.</br>
-                            If this email looks weird,<a> view it in your browser.</a></br>
-                            If you don't want to receive this newsletteranymore,you can <a>unsubscribe</a>(if you like share it with your friend!)
+                            If this email looks weird,
+                            <a href="#">view it in your browser.</a></br>
+                            If you don't want to receive this newsletteranymore,you can 
+                            <a href="#">unsubscribe</a>
+                            (if you like share it with your friend!)
                           </p>
                         </td>
                       </tr>
