fixes for mobile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Testapp</title>
     <%= stylesheet_link_tag  "email" %>
-    <%= stylesheet_link_tag  "phone" %>
+    <%#= stylesheet_link_tag  "phone" %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <!-- <link rel="stylesheet" type="text/css" href="phone.css" data-immutable="true"> -->
     <%= csrf_meta_tags %>
