--- a/app/views/welcome/demo.html.erb
+++ b/app/views/welcome/demo.html.erb
@@ -3,6 +3,74 @@
    #templateContainer { max-width: 700px; width: 100%; }
    #templatePreheader{ padding: 0 30px; }
 </style>
+
+<style type="text/css" data-immutable="true">
+  @media only screen and (max-width: 321px) {
+    .main-container{
+      width: 100%;
+      border: 0;
+    }
+
+    .desk-img{
+      width: 100%;
+    }
+
+    .academy-img-cell{
+      display: none;
+    }
+
+    .container, .content{
+      max-width: 100%;
+    }
+
+    .centered-cell{
+      text-align: center;
+    }
+
+    .calendar-cell{
+      display: none;
+    }
+
+    .class-info-cell{
+      padding: 0;
+    }
+
+    a.btn{
+      display: inline-block;
+      padding: 10px 50px;
+    }
+
+    .btn-holder{
+      text-align: center;
+    }
+
+    .teacher-info-cell{
+      display: block!important;
+      text-align: center;
+      }
+
+    .teacher-info-cell p, #name-cell{
+      text-align: left;
+    }
+
+    #teacher-pic{
+      display: inline-block;
+    }
+
+    #teacher-bio{
+      padding-left: 0;
+    }
+
+    .footer-img-holder, .about-header-cell, .about-table-cell{
+      display: block;
+      text-align: center;
+    }
+
+    .about-company-table{
+      display: none;
+    }
+  }
+</style>
 <table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
   <tr>
     <td align="center" valign="top" id="bodyCell">
